# open-genome-agent

./: .editorconfig  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_BACKLOG.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  black.bat  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
docs/: PLAN.toon  (+6 more)
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/.agents/skills/annotate-variants/: SKILL.md
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/.claude/agents/: explorer.md  orchestrator.md  report-writer.md  workflow-ops.md
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/.codex/: config.toml  hooks.json
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/.codex/agents/: annotation-worker.toml  evidence-reviewer.toml  orchestrator.toml  workflow-ops.toml
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/.github/workflows/: ci.yml
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/adapters/claude/: build.py  install.py
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/adapters/codex/: build.py  install.py
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/agents-src/: explorer.md  qc-worker.md  workflow-ops.md
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/docs/: architecture.md  harness-matrix.md  reporting-spec.md  roadmap.md  safety-model.md
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/examples/reports/: demo_run_manifest.json  demo_sample_summary.json
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/hooks/: README.md
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/hooks/claude/: pre_tool_policy.py
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/hooks/codex/: post_tool_use_review.py  stop_continue.py  user_prompt_submit_data_flywheel.py
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/mcp/: README.md
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/mcp/evidence-store/: README.md  server.py
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/mcp/workflow/: server.py
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/policy/: analysis-rubric.md  core-policy.md
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/schemas/: finding.schema.json
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/scripts/: build_all.py  build_shared.py
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/skills-src/annotate-variants/: core.md
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/skills-src/detect-build-normalize/: skill.yaml
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/skills-src/ingest-vcf/: skill.yaml
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/skills-src/nextflow-runner/: skill.yaml
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/skills-src/pharmacogenomics/: core.md  skill.yaml
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/skills-src/prioritize-findings/: core.md  skill.yaml
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/skills-src/query-variants/: core.md  skill.yaml
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/skills-src/setup-workstation/: core.md
docs/source-imports/from-hydra-reach-2026-04-11/open-genome-agent/open-genome-agent/tests/: test_schemas.py
(+173 files in other folders)
