[project]
name = "open-genome-agent"
version = "0.1.0"
description = "Cross-harness scaffold for local-first genome-analysis skills, agents, and evidence-bound reporting."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []
authors = [
  { name = "45ck" },
]
keywords = ["genomics", "agents", "bioinformatics", "mcp", "codex", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
  "PyYAML>=6.0",
  "jsonschema>=4.21",
]

[project.urls]
Homepage = "https://github.com/45ck/open-genome-agent"
Repository = "https://github.com/45ck/open-genome-agent"
Issues = "https://github.com/45ck/open-genome-agent/issues"
Documentation = "https://github.com/45ck/open-genome-agent/tree/main/docs"

[tool.unittest]
# Placeholder section for editors that surface project metadata.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
